--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -454,6 +454,7 @@ a {
   background-size: cover;
   display: block;
   max-height:60px;
+  max-width:120px;
   width: auto;
   height: auto;
   border: none;
@@ -476,6 +477,7 @@ a {
   background-size: cover;
   display: block;
   max-height:60px;
+  max-width:120px;
   width: auto;
   height: auto;
   border: none;
@@ -499,6 +501,7 @@ a {
   display: block;
   display: block;
   max-height:60px;
+  max-width:120px;
   width: auto;
   height: auto;
   border: none;
@@ -521,6 +524,7 @@ a {
   background-size: cover;
   display: block;
   max-height:60px;
+  max-width:120px;
   width: auto;
   height: auto;
   border: none;
