--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -447,43 +447,34 @@ a {
   text-align: center;
 }
 
-#first
+.nav-button 
+{
+  display: inline-block;
+  max-height:60px;
+  max-width:120px;
+  width: auto;
+  height: auto;
+  border: none;
+
+  margin-right: 40px;
+  cursor: pointer;
+
+  transition: transform 0.5s;
+}
+
+.first .nav-button
 {
   background: url(../main/first.png) no-repeat;
-  display: inline-block;
-  display: block;
-  max-height:60px;
-  max-width:120px;
-  width: auto;
-  height: auto;
-  border: none;
 
-  margin-right: 40px;
-  cursor: pointer;
-
-  transition: transform 0.5s;
-  
   &:hover {
       transform: translate(-10px, 0px);
       border: none;
   }
 }
 
-#prev
+.prev .nav-button
 {
   background: url(../main/previous.png) no-repeat;
-  display: inline-block;
-  display: block;
-  max-height:60px;
-  max-width:120px;
-  width: auto;
-  height: auto;
-  border: none;
-
-  margin-right: 40px;
-  cursor: pointer;
-
-  transition: transform 0.5s;
   
   &:hover {
       transform: translate(-10px, 0px);
@@ -491,22 +482,9 @@ a {
   }
 }
 
-#next
+.next .nav-button
 {
   background: url(../main/next.png) no-repeat;  
-  display: inline-block;
-  display: block;
-  display: block;
-  max-height:60px;
-  max-width:120px;
-  width: auto;
-  height: auto;
-  border: none;
-
-  margin-left: 40px;
-  cursor: pointer;
-
-  transition: transform 0.5s;
   
   &:hover {
       transform: translate(10px, 0px);
@@ -514,21 +492,9 @@ a {
   }
 }
 
-#last
+.last .nav-button
 {
   background: url(../main/last.png) no-repeat;
-  display: inline-block;
-  display: block;
-  max-height:60px;
-  max-width:120px;
-  width: auto;
-  height: auto;
-  border: none;
-
-  margin-right: 40px;
-  cursor: pointer;
-
-  transition: transform 0.5s;
   
   &:hover {
       transform: translate(10px, 0px);
