--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -450,10 +450,10 @@ a {
 .nav-button 
 {
   display: inline-block;
-  max-height:60px;
-  max-width:120px;
-  width: auto;
-  height: auto;
+  // max-height:60px;
+  // max-width:120px;
+  width: 100px;
+  height: 60px;
   border: none;
 
   margin-right: 40px;
@@ -523,7 +523,7 @@ a {
   border: none;
 }
 
-#top-button 
+.top-button 
 {
   display: inline-block;
   background-color: #FF9800;
@@ -541,7 +541,7 @@ a {
   z-index: 1000;
 }
 
-#top-button::after 
+.top-button::after 
 {
   content: "\f077";
   font-size: 2em;
@@ -549,18 +549,18 @@ a {
   color: #fff;
 }
 
-#top-button:hover 
+.top-button:hover 
 {
   cursor: pointer;
   background-color: #333;
 }
 
-#top-button:active 
+.top-button:active 
 {
   background-color: #555;
 }
 
-#top-button.show 
+.top-button.show 
 {
   opacity: 1;
   visibility: visible;
