edit to top button

--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -37,9 +37,9 @@
 <!-- Display Contents -->
 <div class="comic-strip" id="comic">
     <!-- Navigation -->
-    <div class="chapter-nav">
-        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" id="first"></a>
-        <a title="prev_title" href="{{ prev_link }}" id="prev"></a>
+    <div class="chapter-nav" id="first-nav">
+        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" class="first"></a>
+        <a title="prev_title" href="{{ prev_link }}" class="prev"></a>
 
         <div class="dropdown show">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,8 +53,8 @@
             </div>
         </div>
 
-        <a title="next_title" href="{{ next_link }}" id="next"></a>
-        <a title="last_title" href="{{ last_link }}" id="last"></a>
+        <a title="next_title" href="{{ next_link }}" class="next"></a>
+        <a title="last_title" href="{{ last_link }}" class="last"></a>
     </div>
     
     <!-- Images -->
