--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -2,6 +2,7 @@
 @import "rouge-github";
 @import "variables";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
 
 @mixin large {
   @media screen and (min-width: #{$large-breakpoint}) {
@@ -23,6 +24,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif; 
 }
 
 body {
@@ -450,11 +452,11 @@ a {
 .nav-button 
 {
   display: inline-block;
-  background-size: cover;
-  max-height:60px;
-  max-width:120px;
-  width: 100%;
-  height: 100%;
+  background-size: auto;
+  // max-height:60px;
+  // max-width:120px;
+  width: 100px;
+  height: 100px;
   border: none;
 
   margin-right: 40px;
