--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -37,6 +37,19 @@ body {
   color: $body-text-color;
 }
 
+span
+{
+  transform: translate(-50%, -50%);
+  font-size:120px;
+  letter-spacing:0.1em;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: white;
+  text-shadow: 
+            8px 8px #ff1f8f,
+            20px 20px #fff;
+}
+
 #skip-to-content {
   height: 1px;
   width: 1px;
