--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -32,7 +32,7 @@
 
 
 <!-- Back to top button -->
-<a id="top-button"></a>
+<button onclick="topFunction()" id="top-button" title="Go to top">Top</button>
 
 <!-- Display Contents -->
 <div class="comic-strip" id="comic">
