--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -541,44 +541,23 @@ a {
 
 #top-button 
 {
-  display: inline-block;
-  background-color: #FF9800;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 4px;
+  display: none;
   position: fixed;
-  bottom: 30px;
+  bottom: 20px;
   right: 30px;
-  transition: background-color .3s, 
-    opacity .5s, visibility .5s;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
-}
-
-#top-button::after 
-{
-  content: "\f077";
-  font-size: 2em;
-  line-height: 50px;
-  color: #fff;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #CA0189;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
 }
 
 #top-button:hover 
 {
-  cursor: pointer;
-  background-color: #333;
-}
-
-#top-button:active 
-{
-  background-color: #555;
-}
-
-#top-button.show 
-{
-  opacity: 1;
-  visibility: visible;
+  background-color: #ffa8e3;
 }
 
