--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -36,6 +36,9 @@
 
 <!-- Display Contents -->
 <div class="comic-strip" id="comic">
+    <div style="text-align: center;">
+        <span class="pop-up">BOOK 1</span>
+    </div>
     <!-- Navigation -->
     <div class="chapter-nav" id="first-nav">
         <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" class="first"></a>
