--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -481,7 +481,20 @@ a {
 
 .first .nav-button
 {
-  background: url(../main/first.png) no-repeat;
+  // background: url(../main/first.png) no-repeat;
+  background: yellow;
+  display: inline-block;
+  background-size: auto;
+  // max-height:60px;
+  // max-width:120px;
+  width: 100px;
+  height: 100px;
+  border: none;
+
+  margin-right: 40px;
+  cursor: pointer;
+
+  transition: transform 0.5s;
 
   &:hover {
       transform: translate(-10px, 0px);
