--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -40,8 +40,8 @@
 
     <!-- Navigation -->
     <div class="chapter-nav" id="first-nav">
-        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" class="first"></a>
-        <a title="{{ prev_title }}" href="{{ prev_link }}" class="prev"></a>
+        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" class="left"><img src="{{ site.baseurl }}/assets/main/first.png"></a>
+        <a title="{{ prev_title }}" href="{{ prev_link }}" class="left"><img src="{{ site.baseurl }}/assets/main/previous.png"></a>
 
         <div class="dropdown show">
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,8 +55,8 @@
             </div>
         </div>
 
-        <a title="{{ next_title }}" href="{{ next_link }}" class="next"></a>
-        <a title="{{ last_title }}" href="{{ last_link }}" class="last"></a>
+        <a title="{{ next_title }}" href="{{ next_link }}" class="right"><img src="{{ site.baseurl }}/assets/main/next.png"></a>
+        <a title="{{ last_title }}" href="{{ last_link }}" class="right"><img src="{{ site.baseurl }}/assets/main/last.png"></a>
     </div>
     
     <!-- Images -->
