--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -36,7 +36,7 @@
 <!-- Display Contents -->
 <div class="comic-strip" id="comic">
     <!-- Back to top button -->
-        <button id="top-button" title="Go to top">Top</button>
+        <button onclick="topFunction()" id="top-button" title="Go to top">Top</button>
 
     <!-- Navigation -->
     <div class="chapter-nav" id="first-nav">
