--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -465,7 +465,7 @@ a {
 .nav-button 
 {
   display: inline-block;
-  background-size: auto;
+  object-fit: contain;
   max-width: 100px;
   max-height: 100px;
   width: auto;
