--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -497,6 +497,9 @@ a {
 
 .dropdown-menu 
 {
+  background-color: #CA0189;
+  color: white;
+  
   -webkit-transition: all .5s ease-out;
   transition: all .5s ease-out;
   transform: rotateX(90deg);
