--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <a title="{{ next_title }}" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
+        <a title="{{ next_title }}" href="{{ next_link }}"><img class="nav-button" src="{{ site.baseurl }}/assets/main/next.png"></a>
         <a title="{{ last_title }}" href="{{ last_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
     </div>
     
