--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -460,37 +460,36 @@ a {
 
 .chapter-nav {
   text-align: center;
-}
-
-.nav-button 
-{
-  display: inline-block;
-  object-fit: contain;
-  width: 120px;
+  width: 100%;
   height: 60px;
-  border: none;
 
-  margin-right: 40px;
-  cursor: pointer;
+  img
+  {
+    display: inline-block;
+    object-fit: contain;
+    border: none;
+  
+    margin-right: 40px;
+    cursor: pointer;
+  
+    transition: transform 0.5s;
+  }
 
-  transition: transform 0.5s;
-}
-
-.left .nav-button
-{
-  &:hover {
-      transform: translate(-10px, 0px);
-      border: none;
+  a img:hover
+  {
+    position: relative;
   }
 }
 
-.right .nav-button
-{  
-  &:hover {
-      transform: translate(10px, 0px);
-      border: none;
-  }
-}
+
+// .left .nav-button
+// {
+//   &:hover {
+//       transform: translate(-10px, 0px);
+//       border: none;
+//   }
+// }
+
 
 
 #top-button 
