--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -468,6 +468,8 @@ a {
     display: inline-block;
     object-fit: contain;
     border: none;
+    max-width: 100px;
+    max-height: 60px;
   
     margin-right: 40px;
     cursor: pointer;
