--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -447,8 +447,7 @@ a {
 
 // chapter info
 
-.comic-strip 
-{
+.comic-strip {
   width: 100%;
   height: 100%;
 
@@ -463,8 +462,7 @@ a {
   width: 100%;
   height: 60px;
 
-  img
-  {
+  img {
     display: inline-block;
     object-fit: contain;
     border: none;
@@ -475,8 +473,7 @@ a {
     transition: transform 0.5s;
   }
 
-  .left
-  {
+  .left {
     &:hover {
         transform: translate(-10px, 0px);
         border: none;
@@ -491,7 +488,7 @@ a {
     }
   }
 
-  .dropdown-menu {
+  .dropdown {
     max-width: 100px;
   }
 }
