--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 // Body
-$bg-color: #000033   !default;
+$bg-color: #0c0c0c   !default;
 
 // Breakpoints
 $large-breakpoint: 64em !default;
@@ -7,8 +7,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #303E7A   !default;
-$header-bg-color-secondary: #000033 !default;
+$header-bg-color: #000033   !default;
+$header-bg-color-secondary: #0c0c0c !default;
 
 // Chapter
 $chapter-color: #2e3892 !default;
