--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -15,9 +15,9 @@ $chapter-color: #2e3892 !default;
 $chapter-color-secondary: #969ee9 !default;
 
 // Text
-$section-headings-color: #680049 !default;
-$body-text-color: #606c71 !default;
-$body-link-color: #CA0189 !default;
+$section-headings-color: #ffe2e2 !default;
+$body-text-color: #ffffff !default;
+$body-link-color: #f7cce9 !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
