--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -7,7 +7,7 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #000033   !default;
+$header-bg-color: #0c0c0c   !default;
 $header-bg-color-secondary: #0c0c0c !default;
 
 // Chapter
@@ -17,8 +17,8 @@ $chapter-color-secondary: #969ee9 !default;
 // Text
 $section-headings-color: #ffe2e2 !default;
 $body-text-color: #ffffff !default;
-$body-link-color: #f7cce9 !default;
-$blockquote-text-color: #819198 !default;
+$body-link-color: #ffffff !default;
+$blockquote-text-color: #ffffff !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
