--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -151,6 +151,7 @@ a {
   overflow: hidden;
   position: relative;
   border-bottom: solid 5px white;
+  padding: 2rem 1rem;
 
   img {
     width: 20%;
@@ -476,10 +477,38 @@ a {
         border: none;
     }
   }
-
+  
   .dropdown {
+    position: relative;
     display: inline-block;
   }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+
 }
 
 
