--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -44,7 +44,7 @@
         <a title="{{ prev_title }}" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
 
         <div class="dropdown">
-        <button class="custom-btn">Chapters</button>
+        <button class="dropdown-btn">Chapters</button>
         <div class="dropdown-content">
             {% for chapter in site.archive %}
             <a href="{{ site.baseurl }}{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a>
