--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -451,7 +451,7 @@ a {
   text-align: center;
   display:inline-block;
   width: 100%;
-  height: 60px;
+  margin-top: 10px;
 
   img {
     object-fit: contain;
