--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -477,55 +477,89 @@ a {
     }
   }
 
-  .dropdown-btn {
-    display: inline-block;
-    padding: 16px;
-    font-size: 16px;
-    margin-top: 0px;
+  nav {
+    margin: auto;
+    position: relative;
+    width: 100px;
+  }
 
-    color: rgba(255, 255, 255, 0.7);
-    background-color: rgba(255, 255, 255, 0.08);
-    border-color: rgba(255, 255, 255, 0.2);
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 0.3rem;
-    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
-
-    &:hover {
-      color: rgba(255, 255, 255, 0.8);
-      text-decoration: none;
-      background-color: rgba(255, 255, 255, 0.2);
-      border-color: rgba(255, 255, 255, 0.3);
-    }
+  nav h2 {
+    border-radius: 2px;
+    position: relative;
+    background: tomato;
+    height: 40px;
+    color: ivory;
+    font-weight: 200;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    transition: all .4s;
   }
   
+  nav:hover h2{
+    transform: translateY(-2px);
+   }
+  nav:hover:active h2{
+    transform: translateY(10px);
+   }
   
-  .dropdown {
+  input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    opacity: 0;
+    cursor: pointer;
+    height: 40px;
+  }
+  
+  #toggle:checked ~ul {
+    height: 0%;
+  }
+  
+  nav ul {
+    padding-left: 0;
+    padding-top: 0;
+    margin-top: 0;
+    list-style: none;
+    overflow: hidden;
+    text-align: right;
+    margin-bottom: 22px;
+    text-align: center;
+    transition: all .4s ease-out;
+    height: 100%;
+    
+  }
+  nav ul li {
+    border-radius: 2px;
     position: relative;
     display: inline-block;
+    margin-left: 35px;
+    line-height: 1.5;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 5px;
+    background: tomato;
+    transition: background 3s;
+    box-shadow: 2px 2px 10px -2px rgba(0,0,0,.35);
   }
   
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  nav ul li:hover {
+    background: mediumorchid;
+    transition: background .45s;
   }
   
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+  nav ul a {
+    display: block;
+    color: ivory;
+    text-transform: lowercase;
+    font-size: 18px;
+    font-weight: 200;
     text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+    transition: color .3s;
+  }  
   
 
 }
