--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -150,8 +150,10 @@ a {
   text-align: center;
   overflow: hidden;
   position: relative;
-  border-bottom: solid 5px white;
   padding: 2rem 1rem;
+
+  border: 0 0 10px 0 solid;
+  border-image: radial-gradient(rgb(0,143,104), rgb(250,224,66)) 1;
 
   img {
     width: 20%;
@@ -521,7 +523,8 @@ a {
   }
   
   nav ul {
-    display:none;
+    display: none;
+    
     padding-left: 0;
     padding-top: 0;
     margin-top: 0;
@@ -534,26 +537,28 @@ a {
     height: 100%;
   }
 
-  nav ul:hover {
-    display:block;
+  nav ul:hover ~ nav ul li:hover{
+    display: inline-block;
     transition: all .4s ease-out;
   }
 
   nav ul li {
+    display: none;
+
     border-radius: 2px;
     position: relative;
-    display: inline-block;
     margin-left: 35px;
     line-height: 1.5;
     width: 100%;
     margin: 0;
     margin-bottom: 5px;
-    background: CA0189;
+    background: #CA0189;
     transition: background 3s;
     box-shadow: 2px 2px 10px -2px rgba(0,0,0,.35);
   }
   
   nav ul li:hover {
+    display: inline-block;
     background: mediumorchid;
     transition: background .45s;
   }
