--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -566,8 +566,8 @@ a {
     display: block;
     color: ivory;
     text-transform: lowercase;
-    font-size: 12px;
-    font-weight: 200;
+    font-size: 10px;
+    // font-weight: 200;
     text-decoration: none;
     transition: color .3s;
   }  
