--- a/_includes/comic.html
+++ b/_includes/comic.html
@@ -44,15 +44,15 @@
         <a title="{{ prev_title }}" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
 
         <div class="dropdown d-inline-block">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Chapters
-            </button>
-            <div class="dropdown-menu">
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% for chapter in site.archive %}
                 <a href="{{ site.baseurl }}{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a>
                 {% endfor %}
             </div>
-            </div>
+        </div>
  
         <a title="{{ next_title }}" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
         <a title="{{ last_title }}" href="{{ last_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
@@ -69,24 +69,24 @@
     {% endfor %}
 
     <!-- Navigation -->
-    <!-- <div class="chapter-nav">
-        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}" id="first"></a>
-        <a title="prev_title" href="{{ prev_link }}" id="prev"></a>
+    <div class="chapter-nav" id="first-nav">
+        <a title="{{ site.archive.first.title }}" href="{{ site.baseurl }}{{ site.archive.first.url }}"><img class="left" src="{{ site.baseurl }}/assets/main/first.png"></a>
+        <a title="{{ prev_title }}" href="{{ prev_link }}"><img class="left" src="{{ site.baseurl }}/assets/main/previous.png"></a>
 
-        <div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="dropdown d-inline-block">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Chapters
-            </a>
-        
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 {% for chapter in site.archive %}
-                    <a href="{{ site.baseurl }}{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a>
+                <a href="{{ site.baseurl }}{{ chapter.url }}" class="dropdown-item">{{ chapter.title }}</a>
                 {% endfor %}
             </div>
         </div>
-
-        <a title="next_title" href="{{ next_link }}" id="next"></a>
-    </div> -->
+ 
+        <a title="{{ next_title }}" href="{{ next_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/next.png"></a>
+        <a title="{{ last_title }}" href="{{ last_link }}"><img class="right" src="{{ site.baseurl }}/assets/main/last.png"></a>
+    </div>
     
 </div>
 
