--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -1,17 +1,9 @@
 @import "normalize";
 @import "rouge-github";
 @import "variables";
+@import "comic";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
-
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-
-// Add your custom variables here
-$dropdown-bg:                       $dark;
-$dropdown-link-color:               $light;
-
-@import "~bootstrap/scss/bootstrap";
 
 
 @mixin large {
@@ -94,7 +86,7 @@ a {
   background-color: rgba(255, 255, 255, 0.08);
   border-color: rgba(255, 255, 255, 0.2);
   border-style: solid;
-  border-width: 1px;
+  border-width: 3px;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 
@@ -131,29 +123,6 @@ a {
   }
 }
 
-.chapter-btn {
-  color: #680049;
-  border-top: 2px solid #680049;
-  border-bottom: 2px solid #680049;
-  border-radius: 0px;
-  display: inline-block;
-
-  -webkit-padding-start: 0;
-  padding: 18px 36px;
-
-  cursor: pointer;
-  box-shadow: inset 0 0 0 0 #680049;
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s;
-  transition: ease-out 0.4s;
-
-  &:hover {
-    color: #FFF;
-    box-shadow: inset 0 0 0 50px #680049;
-    text-decoration: none;
-  }
-
-}
 
 .page-header {
   color: $header-heading-color;
@@ -162,7 +131,7 @@ a {
   position: relative;
   padding: 2rem 1rem;
 
-  border: 0 0 10px 0;
+  border-width: 5px;
   border-image: radial-gradient(rgb(0,143,104), rgb(250,224,66)) 1;
 
   img {
@@ -446,71 +415,4 @@ a {
   color: $blockquote-text-color;
 }
 
-
-// chapter info
-
-.comic-strip {
-  width: 100%;
-  height: 100%;
-
-  img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.chapter-nav {
-  text-align: center;
-  display: inline-block;
-  width: 100%;
-
-  img {
-    object-fit: contain;
-    border: none;
-    max-width: 60px;
-    max-height: 60px;
-    cursor: pointer;
-  
-    transition: transform 0.5s;
-  }
-
-  .left {
-    &:hover {
-        transform: translate(-10px, 0px);
-        border: none;
-    }
-  }
-
-  .right
-  {
-    &:hover {
-        transform: translate(10px, 0px);
-        border: none;
-    }
-  }
-  
-
-}
-
-
-#top-button 
-{
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: #CA0189;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#top-button:hover 
-{
-  background-color: #ffa8e3;
-}
 
