--- a/_sass/animations.scss
+++ b/_sass/animations.scss
@@ -1,41 +1,53 @@
+// Full page animations
 @keyframes unfoldIn {
     0% {
-      transform:scaleY(.005) scaleX(0);
+        transform:scaleY(.005) scaleX(0);
     }
     50% {
-      transform:scaleY(.005) scaleX(1);
+        transform:scaleY(.005) scaleX(1);
     }
     100% {
-      transform:scaleY(1) scaleX(1);
+        transform:scaleY(1) scaleX(1);
     }
-  }
-  
-  @keyframes unfoldOut {
+}
+
+@keyframes unfoldOut {
     0% {
-      transform:scaleY(1) scaleX(1);
+        transform:scaleY(1) scaleX(1);
     }
     50% {
-      transform:scaleY(.005) scaleX(1);
+        transform:scaleY(.005) scaleX(1);
     }
     100% {
-      transform:scaleY(.005) scaleX(0);
+        transform:scaleY(.005) scaleX(0);
     }
-  }
-  
-  @keyframes zoomIn {
+}
+
+@keyframes zoomIn {
     0% {
-      transform:scale(0);
+        transform:scale(0);
     }
     100% {
-      transform:scale(1);
+        transform:scale(1);
     }
-  }
-  
-  @keyframes zoomOut {
+}
+
+@keyframes zoomOut {
     0% {
-      transform:scale(1);
+        transform:scale(1);
     }
     100% {
-      transform:scale(0);
+        transform:scale(0);
     }
-  }
+}
+
+
+// Single animation
+@keyframes glow-image {
+    from {
+        box-shadow: 0 0 10px -10px #d4cc72;
+    }
+    to {
+        box-shadow: 0 0 10px 10px #d4cc72;
+    }
+}
