--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -131,7 +131,7 @@ a {
   padding: 2rem 1rem;
 
   border-width: 5px;
-  border-image: 10px white;
+  border: 10px white;
 
   img {
     width: 20%;
