--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -140,7 +140,7 @@ a {
     min-height: 200px;
 
     animation: glow-text 2s ease-in-out infinite alternate;
-
+  }
   
 }
 
@@ -416,5 +416,3 @@ a {
 .site-footer-credits {
   color: $blockquote-text-color;
 }
-
-
