--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -130,9 +130,8 @@ a {
   overflow: hidden;
   position: relative;
   padding: 2rem 1rem;
-
-  border-width: 5px;
-  border: 10px white;
+  border-bottom: 10px;
+  border-color: white;
 
   img {
     width: 20%;
