--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,9 @@
 // Body
 $bg-color: #0c0c0c   !default;
+$theme-pink: #c00983 !default;
+$theme-purple: #3229a8 !default;
+$theme-yellow: #f3e872 !default;
+
 
 // Breakpoints
 $large-breakpoint: 64em !default;
