--- a/_sass/comic.scss
+++ b/_sass/comic.scss
@@ -1,4 +1,5 @@
 @import "animations";
+@import "variables";
 
 // chapter info
 
@@ -13,230 +14,204 @@
 }
 
 .chapter-nav {
-    text-align: center;
+  padding-top: 0;
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+
+  a {
+    padding: 10px;
     display: inline-block;
-    width: 100%;
+  }
 
-    img {
-        object-fit: contain;
-        border: none;
-        max-width: 60px;
-        max-height: 60px;
-        cursor: pointer;
-
-        transition: transform 0.5s;
-    }
-
-    .left {
-        &:hover {
-            transform: translate(-10px, 0px);
-            border: none;
-        }
-    }
-
-    .right
-    {
-        &:hover {
-            transform: translate(10px, 0px);
-            border: none;
-        }
-    }
-
-
-}
-
-
-#chapter-btn
-{
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-
-    background-color: #ca018a1e;
-    border-color: #ca018ac5;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 0.3rem;
-    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
-    outline: none;
-
-    color: white;
+  img {
+    object-fit: contain;
+    border: none;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
+
+    filter: brightness(2.5);
+
+    transition: transform 0.5s;
+  }
+
+  .left {
+    &:hover {
+      filter: brightness(5);
+      transform: translate(-10px, 0px);
+      border: none;
+    }
+  }
+
+  .right
+  {
+    &:hover {
+      filter: brightness(5);
+      transform: translate(10px, 0px);
+      border: none;
+    }
+  }
+
+
 }
 
-#top-btn:hover 
+
+.pink-btn
 {
+  display: inline-block;
+  margin-bottom: 1rem;
+  padding: 0.5vw;
+  color: rgba(255, 255, 255, 0.7);
+
+  // background-color: #ca018a1e;
+  // border-color: #ca018ac5;
+  // border-style: solid;
+
+  background-color: rgba(255, 255, 255, 0.08);
+  border-color: rgba(255, 255, 255, 0.2);
+  border-style: solid;
+  border-width: 3px;
+  border-radius: 0.3rem;
+  transition: color 1s, background-color 1s, border-color 1s;
+
+
+  &:hover 
+  {
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
     background-color: rgba(255, 255, 255, 0.2);
     border-color: rgba(255, 255, 255, 0.3);
+  }
+
 }
 
 
-
-#top-btn 
+.top-btn 
 {
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-
-    background-color: #ca018a1e;
-    border-color: #ca018ac5;
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 0.3rem;
-    transition: color 1s, background-color 1s, border-color 1s;
-    outline: none;
-
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
+  @extend .pink-btn;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
 }
 
-#top-btn:hover 
-{
-    color: rgba(255, 255, 255, 0.8);
-    text-decoration: none;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-color: rgba(255, 255, 255, 0.3);
-}
 
 #modal-container {
-    position:fixed;
-    display:table;
-    height:100%;
-    width:100%;
-    top:0;
-    left:0;
-    transform:scale(0);
-    z-index:1;
+  position:fixed;
+  // display:inline-block;
+  // text-align:center;
+  // margin: 0 auto;
+
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  transform:scale(0);
+  z-index:1;
+  
+  
+  &.chapter-list {  
+    transform:scaleY(.01) scaleX(0);
+    animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+    .modal-background {
+      .modal {
+        transform:scale(0);
+        animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      }
+    }
     
-    &.chapter-list {
-      transform:scaleY(.01) scaleX(0);
-      animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+    &.out {
+      transform:scale(1);
+      animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
       .modal-background {
         .modal {
-          transform:scale(0);
-          animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+          animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
         }
+      }
+    }
+  }
+
+  .modal-background {
+    display:inline-block;
+    // text-align:center;
+    // margin: 0 auto;
+
+    background:rgba(255, 137, 235, 0.226);
+    height: 100%;
+    width: 100%;
+  }
+  
+  .modal {
+    position:relative;
+    display:inline-block;
+    // text-align:center;
+    // margin: 0 auto;
+
+    top: 10%;
+    z-index: 10;
+    background:white;
+    border-radius:3px;
+    font-weight:300;
+
+    width: -webkit-max-content;
+    height: -webkit-max-content;
+    overflow-y: auto;
+  }
+
+  .modal-header {
+    padding: 0 0 0 0;
+    margin: 0;
+    height: auto;
+    width: auto;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: center;
+    padding-bottom: 0;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-body {
+    padding: 0;
+    
+    ul {    
+      padding: 0;
+      margin-top: 0;
+      list-style-type: none;
+      
+      li {
+        padding: 10px 20px 10px 20px;
+        // -webkit-transition: background-color 1s ease-out;
       }
       
-      &.out {
-        transform:scale(1);
-        animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-        .modal-background {
-          .modal {
-            animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-          }
-        }
+      li:hover {
+        background-color: #f5dcf2;
       }
-    }
-  
-    .modal-background {
-      display:table-cell;
-      background:rgba(0,0,0,.8);
-      text-align:center;
-      vertical-align:middle;   
-    }
-    
-    .modal {
-        background:white;
-        display: box;
-        border-radius:3px;
-        font-weight:300;
-        margin: auto;
-        width: -webkit-max-content;
-        height: -webkit-max-content;
-        overflow-y: auto;
-      }
-    
-      .modal-header {
-        padding: 0 0 0 0;
-        margin: 0;
-      }
-  
-      /* The Close Button */
-      .close {
-        color: #aaaaaa;
-        float: center;
-        padding-bottom: 0;
-        font-size: 28px;
-        font-weight: bold;
-      }
-  
-      .close:hover,
-      .close:focus {
-        color: #000;
+      
+      li a {
         text-decoration: none;
-        cursor: pointer;
       }
-  
-      .modal-body {
-        width: auto;
-        height: auto;
-        // margin-top: 0;
-        padding: 0;
-        
-        ul {    
-          padding: 0;
-          margin-top: 0;
-          list-style-type: none;
-          
-          li {
-            padding: 10px 20px 10px 20px;
-            -webkit-transition: background-color 1s ease-out;
-          }
-          
-          li:hover {
-            background-color: #f5dcf2;
-            font-size: 16px;
-          }
-          
-          li a {
-            text-decoration: none;
-          }
-        }
-      }
+    }
   }
-  
-  .content {
-    min-height:100%;
-    height:100%;
-    background:white;
-    position:relative;
-    z-index:0;
-  
-    .button {
-        display:inline-block;
-        text-align:center;
-        background-color: #ca018a1e;
-        border-color: #ca018ac5;
-        border-style: solid;
-        border-width: 3px;
-        border-radius: 0.3rem;
-        transition: color 1s, background-color 1s, border-color 1s;
-        outline: none;
+}
 
-        color: white;
-        cursor: pointer;
-        padding: 15px;
-        border-radius: 4px;
-  
-      cursor:pointer;
-      &:hover {
-        color: rgba(255, 255, 255, 0.8);
-        text-decoration: none;
-        background-color: rgba(255, 255, 255, 0.2);
-        border-color: rgba(255, 255, 255, 0.3);
-      }
-    }
-  
-  }
+.content {
+  position:relative;
+  display:inline-block;
+  text-align:center;
+  z-index: 0;
+}
   
   
   
