--- a/_sass/animations.scss
+++ b/_sass/animations.scss
@@ -45,10 +45,10 @@
 // Single animation
 @keyframes glow-text {
     from {
-      text-shadow: 0.5vw 0.5vw $theme-purple, 0 0 0.5vw $theme-yellow;
+      text-shadow: calc(5px + 0.5vw) calc(5px + 0.5vw) $theme-purple, 0 0 calc(2px + 0.5vw) $theme-yellow;
     }
     to {
-      text-shadow: 0.5vw 0.5vw $theme-purple, 0 0 1.5vw $theme-yellow;
+      text-shadow: calc(5px + 0.5vw) calc(5px + 0.5vw) $theme-purple, 0 0 calc(5px + 1.5vw) $theme-yellow;
     }
   }
   
